after some days working in this project i am pushing the new classes for real estate app